--- a/FunctionalProgrammingPlayground/FunctionalProgrammingPlayground.csproj
+++ b/FunctionalProgrammingPlayground/FunctionalProgrammingPlayground.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="LanguageExt.Core" Version="4.2.9" />
     <PackageReference Include="LaYumba.Functional" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
 </Project>
